[project]
name = "frosttuneiq"
version = "0.1.0"
description = "A frost tuning intelligent system for optimizing data lake performance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyiceberg>=0.9.1",
    "pyspark==3.5.2",
    "scikit-learn>=1.7.2",
    "spark>=0.2.1",
    "typer>=0.17.4",
]

[tool.uv]
dev-dependencies = [
    "black>=24.1",
    "pytest>=8.1",
    "mypy>=1.5"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
